# transformer-summarizer

./: .gitignore  README.md  main.py  pyproject.toml  setup_dependencies.sh
configs/: cloud_setup_template.sh  deployment_config_cpu.yaml  deployment_config_mps.yaml  evaluation_config_cpu.yaml  evaluation_config_mps.yaml  model_config.yaml  model_config_cpu.yaml  model_config_mps.yaml  test_training_config.yaml  training_config.yaml  training_config_cloud.yaml  training_config_cpu.yaml  training_config_mps.yaml  vast_ai_config.yaml  vast_ai_template.json
docs/: cloud_training.md  setup_guide.md  vast_ai_complete_guide.md  vast_ai_quickstart.md  vast_ai_workflow.md
scripts/: cloud_train.py  deploy.py  setup_cloud_training.py  setup_dev.py  train.py  train_cpu.py  train_mps.py  train_remote.py
src/transformer_summarizer/: __init__.py
src/transformer_summarizer/data/: dataset.py
src/transformer_summarizer/models/: attention.py  layers.py  transformer.py
src/transformer_summarizer/training/: trainer.py
src/transformer_summarizer/utils/: __init__.py  cpu_optimizations.py  device_optimization.py
