[project]
name = "transformer-summarizer"
version = "0.1.0"
description = "CPU-optimized Transformer for text summarization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core ML libraries (CPU versions)
    "torch>=2.0.0",
    "torchvision",
    "torchaudio", 
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "tokenizers>=0.13.0",
    
    # Data processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # Jupyter
    "jupyter",
    "notebook",
    "ipykernel",
    "ipywidgets",
    
    # Optimization & deployment
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "gradio>=3.35.0",
    "streamlit>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    
    # Experiment tracking
    "wandb>=0.15.0",
    "mlflow>=2.4.0",
    "tensorboard>=2.13.0",
    
    # Data versioning
    "dvc[all]>=3.0.0",
    
    # Evaluation
    "rouge-score>=0.1.2",
    "nltk>=3.8.1",
    "sacrebleu>=2.3.0",
    "bert-score>=0.3.13",
    
    # Development tools
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    
    # System utilities
    "psutil>=5.9.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Platform-specific optimizations not available for this system
# Alternative optimizations will be used
accelerate = [
    "accelerate>=0.20.0",
]

dev = [
    "pytest-xdist",  # Parallel testing
    "coverage",
    "bandit",        # Security linting
    "safety",        # Dependency security
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/configs",
    "/scripts",
    "/docs",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
